# tinylogging

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  Taskfile.yml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: check.yml  documentation.yml
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  index.md
search/: search_index.json
src/: __init__.py
src/log/: __init__.py
src/tinylogging/: __init__.py  formatter.py  level.py  record.py
src/tinylogging/aio/: __init__.py  handlers.py
src/tinylogging/helpers/: __init__.py
src/tinylogging/sync/: __init__.py  handlers.py
tools/: release.py
