[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinylogging"
version = "3.1.0"
description = ""
authors = [ "Hamlet <hamlets849@gmail.com>",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HamletSargsyan/tinylogging"
homepage = "https://github.com/HamletSargsyan/tinylogging"
keywords = [ "logging",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3", "Operating System :: OS Independent", "Intended Audience :: Developers",]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
anyio = "4.6.2.post1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pre-commit = "^4.0.1"
