[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinylogging"
version = "4.0.0"
description = ""
authors = [ "Hamlet <hamlets849@gmail.com>",]
license = "MIT"
readme = "README.md"
repository = "https://github.com/HamletSargsyan/tinylogging"
homepage = "https://github.com/HamletSargsyan/tinylogging"
keywords = [ "logging",]
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3", "Operating System :: OS Independent",]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
anyio = "4.6.2.post1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pre-commit = "^4.0.1"
